favourite button function added

--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,5 @@
 }
 
 .custom-button {
-    @apply btn bg-orange-500 hover:bg-orange-700 border-none normal-case;
+    @apply btn bg-orange-500 hover:bg-orange-700 border-none;
 }
