banner and chef sectionstyle updated

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@
     @apply btn bg-orange-500 hover:bg-orange-700 border-none;
 }
 
-.color{
-    background-color: #f97316
+.color {
+    background-color: #92400e;
 }
